<?xml version="1.0"?>
<package>
  <name>kinect_driver</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rgbd</build_depend>
  <run_depend>rgbd</run_depend>

</package>
