<?xml version="1.0"?>
<package format="3">
  <name>kinect_driver</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libfreenect-dev</depend>
  <depend>rgbd</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
